--- a/backend/resources/css/app.css
+++ b/backend/resources/css/app.css
@@ -1,12 +1,25 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+@import '../../vendor/filament/forms/dist/index.css';
+@import "../../vendor/filament/filament/dist/theme.css";
 
-/* @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php'; */
-@source '/../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+
+.list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.list:before {
+  content: '•';
+  display: inline-block;
+  color: #ED1C24;
+  font-size: 30px;
+}
+ 
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: #ED1C24;
+  opacity: 1;
 }
